<resources>
    <string name="app_name">FactoryTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="FactoryTest">Factory Test</string>
    <string name="LongTest">Long Test</string>
    <string name="WriteMac">烧录MAC地址</string>
    <string name="Mipi_Camera">MIPI Camera</string>
    <string name="HandWriteMac">Hand Write Mac</string>
    <string name="FactoryReset">Factory Reset</string>
    <string name="btnScan">Scan Again</string>
    <string name="btnWriteMac">Write MAC</string>
    <string name="btnWriteSn">Write SN</string>
    <string name="btnWriteUsid">Write USID</string>
    <string name="SnAddr">Sn Address:</string>
    <string name="UsidAddr">Usid Address:</string>
    <string name="DeviceidAddr">Deviceid Address:</string>
    <string name="TF_Test">TF</string>
    <string name="MCU_Test">MCU I2C</string>
    <string name="GSENSOR_Test">GSENSOR I2C</string>
    <string name="AGEING_Test">老化测试</string>
    <string name="SPI_Test">SPI</string>
    <string name="HDMI_Test">HDMI I2C</string>
    <string name="FUSB302_Test">FUSB302 I2C</string>
    <string name="RstMcu">复位MCU</string>
    <string name="USB1_Test">USB2.0</string>
    <string name="USB2_Test">USB3.0</string>
    <string name="USB1_Test_Other">USB1</string>
    <string name="USB2_Test_Other">USB2</string>
    <string name="Gigabit_Test">Gigabit Test</string>
    <string name="Test_Fail">fail</string>
    <string name="Test_Ok">pass</string>
    <string name="btnCvbsVideo">CVBS Video</string>
    <string name="Cvbs_Video">CVBS Video Test</string>
    <string name="Lan_Test">LAN</string>
    <string name="Wifi_Test">Wifi</string>
	 <string name="BT_Test">BT</string>
	<string name="Rtc_Test">RTC</string>
    <string name="Hdmi_Test">Hdmi Test</string>
    <string name="Led_red_Test">红灯是否闪烁?</string>
    <string name="Led_white_Test">白灯红灯是否闪烁?</string>
    <string name="Led_TestIng">Led 测试中</string>
    <string name="PowerKey_Test">Power Key Test</string>
    <string name="PowerKey_TestIng">Power Key Testing</string>
    <string name="btnHdmi">Hdmi</string>
    <string name="btnLed">Led</string>
    <string name="btnPowerKey">Power Key</string>
    <string name="btnSave">Save Test Result</string>
    <string name="LongTestFinish">Long Test Finish.</string>
    <string name="TestResult">Last Test Result</string>
    <string name="TestResultValue">NULL</string>
    <string name="SaveResult">Save Test Result Success!</string>

    <string name="showmac">MAC : </string>
    <string name="showsoftware">software version : </string>
    <string name="lssue_version">lssue version : </string>
    <string name="client_version">software version : </string>
    <string name="showusid">USID : </string>
    <string name="btnEnd">End</string>
    <string name="ScanText">Scan Text : </string>
    <string name="rebootsystem">Reboot</string>
    <string name="ScanError">Scan Error</string>
    <string name="showsn">SN : </string>
    <string name="showdeivceid">DeviceID : </string>
    <string name="TestNotcompleted">hardware test have not completed</string>
    <string name="TestError">hardware test have error item</string>
    <string name="showLength">char</string>
    <string name="showip">以太网IP地址 : </string>
    <string name="showwifimac">Wifi MAC地址 : </string>
    <string name="showwifiip">Wifi IP地址 : </string>

    <string name="hardware_test_help">pass input ok. fail input mute.</string>
    <string name="long_test_finish">Long Test Finish.</string>
    <string name="check_sdcard_wifi_config">Please check wifi config in udisk.</string>
	<string name="noexist">is no existent</string>
	<string name="exit">请按OK键退出</string>
    <string name="firmware_version">固件版本号 : </string>
	<string name="device_type">设备型号 : </string>
    <string name="mac_check">mac地址校验</string>
    <string name="invalid_mac">  mac地址无效</string>
    <string name="testled">现在信号灯测试，请注意观 察！</string>
    <string name="the_same_mac"> mac地址一致！</string>
   	<string name="the_diff_mac"> mac地址不一致！</string>
    <string name="write_mac_usid"> Mac地址烧录</string>
    <string name="ddr_size"> 内存大小:</string>
    <string name="nand_size"> 存储容量:</string>
	<string name="IRKeyTest">红外遥控测试</string>
    <string name="KeyTest">按键测试</string>
	<string name="EnableWol">打开WOL</string>
	<string name="speaker_MIC">MIC</string>
	<string name="DisableWol">关闭WOL</string>
	<string name="PhoneMictTitle">麦克风测试</string>
	<string name="PhoneMicSubTitle">请对麦克风说点什么</string>
	<string name="btnRetest">再次测试</string>
	<string name="btnSkipText">返回</string>
	<string name="InsertSdCard">请插入SD卡！</string>
	<string name="SdCardNospace">SD卡没有空间！</string>
	<string name="HeadsetRecodrSuccess">录音成功，开始回放！</string>
    <string name="RecordError">Record error!</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="r1">R1</string>
    <string name="r2">R2</string>
    <string name="x">x=</string>
    <string name="y">y=</string>
    <string name="left_default">请转动左摇杆</string>
    <string name="right_default">请转动右摇杆</string>
    <string name="down">DPAD_DOWN</string>
    <string name="up">DPAD_UP</string>
    <string name="left">DPAD_LEFT</string>
    <string name="right">DPAD_RIGHT</string>
    <string name="button_a">BUTTON_A</string>
    <string name="button_b">BUTTON_B</string>
    <string name="button_x">BUTTON_X</string>
    <string name="button_y">BUTTON_Y</string>
    <string name="button_select">选择</string>
    <string name="button_start">开始</string>
    <string name="va">声音加</string>
    <string name="vs">声音减</string>
    <string name="f12">按键映射</string>
    <string name="back">返回</string>
    <string name="menu">菜单</string>
    <string name="mute">静音</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>

    <string name="s_cpu_thermal">CPU Thermal:</string>
    <string name="s_cpu_freq">CPU Freq:</string>


</resources>
